:bug: Fix the tiny black gap when a game is fully covering the screen

--- a/src/ct.release/ct.css
+++ b/src/ct.release/ct.css
@@ -2,6 +2,7 @@
     margin:0;
     padding:0;
     border:0;
+    line-height:0;
 }
 body {
     background: #000;
